# zzz-tools

./: README.md  native-app-roadmap.md
native-app/: .gitignore  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
native-app/data/discs/: astral_voice.json  branch_and_blade_song.json
native-app/sidecar/: README.md
native-app/sidecar/disc_capture/: disc_capture.spec  disc_capture_v2.py
native-app/src/: App.svelte  app.css  main.ts
native-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
native-app/src-tauri/capabilities/: default.json
native-app/src-tauri/src/: main.rs
native-app/src-tauri/src/commands/: mod.rs  ocr.rs
native-app/src/components/: CharactersPage.svelte  DiscSetsPage.svelte  EffectEditor.svelte  ModListEditor.svelte  SupportCharPanel.svelte  WEnginesPage.svelte
native-app/src/lib/: data.ts  io.ts  settings.ts  slug.ts  tauri.ts  validate.ts
native-app/src/pages/: OcrPage.svelte  (+2 more)
zzz-disc-db/: .gitignore  disc_capture.py  disc_capture_v2.py  requirements.txt
zzz-effect-tool/: .gitignore  effect_json_builder_spec.md  impl.md
zzz-effect-tool/context/: characters.json  disc_sets.json  ocr_stat_key_mapping.md  wengines.json  zzz_calc_logic_report.md
zzz-effect-tool/effect-json-builder/: index.html  package-lock.json  package.json
zzz-optimizer/: README.md  index.html  package-lock.json  package.json
zzz-optimizer/context/: anomary_damage.md  disc_optimizer_spec.md  toutetu.md
zzz-optimizer/data/: effect_library.json
zzz-optimizer/src/: App.svelte  main.ts
(+16 files in other folders)
